--- a/get_scp/scrapy.cfg
+++ b/get_scp/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = helloscrapy.settings
+default = get_scp.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = helloscrapy
+project = get_scp
